Weather data is now displayed on webpage

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav class="search">
+        <input type="text" id="location" name="location" />
+        <button type="submit" id="search-button"></button>
+    </nav>
+    <main class="weather-content">
+        <section class="weather-info">
+            <div id="weather-icon-container">
+
+            </div>
+            <p class="temperature" id="weather-temperature"></p>
+            <p class="city" id="weather-city"></p>
+            <p class="description" id="weather-description"></p>
+        </section>
+    </main>
 </body>
 </html>
