Completed basic functionality

--- a/src/template.html
+++ b/src/template.html
@@ -8,9 +8,9 @@
 <body>
     <nav class="search">
         <input type="text" id="location" name="location" />
-        <button type="submit" id="search-button"></button>
+        <button type="submit" id="search-button">&#128269;</button>
     </nav>
-    <main class="weather-content">
+    <main id="weather-content">
         <section class="weather-info">
             <div id="weather-icon-container">
 
